--- a/JavaScript pruebas/clock.html
+++ b/JavaScript pruebas/clock.html
@@ -19,6 +19,42 @@
             <div class="sc" id="sc"></div>
         </div>
     </div>
+
+    <div id="alarmContainer">
+    <h2>Set Alarm Time</h2>
+    <label>
+        <dis>
+            <select id = "alarmHr">
+            </select>
+        </dis>
+    </label>
+
+    <label>
+        <dis>
+            <select id = "alarmMin">
+            </select>
+        </dis>
+    </label>
+
+    <label>
+        <dis>
+            <select id = "alarmSec">
+            </select>
+        </dis>
+    </label>
+    <div setContainer>
+        <div id='buttonHolder'>
+            <div>
+                <button  id='setButton' onClick='alarmSet()'>Set Alarm</button>
+            </div>
+    
+            <div>
+                <button  id='clearButton' onClick='alarmClear()'>Clear Alarm</button>
+            </div>
+        </div>
+    </div>
+</div>
+
     <script type="text/javascript" src="WorkClock.js"> </script>
     
 </body>
